--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "dotenv": "^8.2.0",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "socket.io-client": "^3.0.4",
     "tailwindcss": "^2.0.2",
     "uuid": "^8.3.2"
   },
