Incluindo nome do usuario

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,16 @@
     "import/prefer-default-export": "off",
     "camelcase": "off",
     "@typescript-eslint/ban-types": "off",
+    "jsx-a11y/label-has-associated-control": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }],
+    "jsx-a11y/label-has-for": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }],
     "import/extensions": [
       "error",
       "ignorePackages",
