--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "socket.io-client": "^3.0.4",
     "tailwindcss": "^2.0.2",
     "uuid": "^8.3.2"
