--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.1.0",
     "socket.io-client": "^3.0.4",
     "tailwindcss": "^2.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webrtc-adapter": "^7.7.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
