--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "react/prop-types": "off",
     "no-param-reassign": "off",
     "prettier/prettier": "error",
     "react/jsx-props-no-spreading": "off",
